--- a/guides/html-javascript.mdx
+++ b/guides/html-javascript.mdx
@@ -20,10 +20,12 @@ description: "Direct integration using vanilla HTML and JavaScript"
     Add the following script to your website's `<head>` section:
     
     ```html
-    <script src="https://adblock2.static-cloudflare.workers.dev/index.js" async data-code="YOUR_VERIFICATION_CODE"></script>
+    <script src="LATEST_SCRIPT_URL" async data-code="YOUR_VERIFICATION_CODE"></script>
     ```
     
-    **Important:** Replace `YOUR_VERIFICATION_CODE` with your unique verification code from the dashboard.
+    **Important:** 
+    - Replace `YOUR_VERIFICATION_CODE` with your unique verification code from the dashboard.
+    - Replace `LATEST_SCRIPT_URL` with the current script URL. Fetch the latest script URL from: `https://config.adunblocker.com/server-tag.json`
   </Step>
   
   <Step title="Server-side Integration (Recommended)">
