--- a/guides/php.mdx
+++ b/guides/php.mdx
@@ -28,6 +28,8 @@ All PHP packages expect the remote URL to return JSON in this format:
 
 A Laravel package to fetch and render scripts from a remote URL with caching support.
 
+**Repository**: [github.com/adunblock/adunblock-server-tag-laravel](https://github.com/adunblock/adunblock-server-tag-laravel)
+
 ### Installation
 
 Install the package via Composer:
@@ -90,11 +92,13 @@ You can provide a custom closure to the `render_script` argument to render the s
 ### Laravel Requirements
 
 - PHP 7.4 or higher
-- Laravel 8/9/10/11
+- Laravel 8/9/10/11/12
 
 ## Symfony Integration
 
 A Symfony bundle to fetch and render scripts from a remote URL with Twig integration and caching support.
+
+**Repository**: [github.com/adunblock/adunblock-server-tag-symfony](https://github.com/adunblock/adunblock-server-tag-symfony)
 
 ### Installation
 
@@ -111,7 +115,7 @@ Enable the bundle in your `config/bundles.php`:
 
 return [
     // ... other bundles
-    Adunblock\ServerTag\Symfony\AdunblockServerTagBundle::class => ['all' => true],
+    AdUnblock\ServerTag\Symfony\AdunblockServerTagBundle::class => ['all' => true],
 ];
 ```
 
@@ -161,7 +165,7 @@ You can provide a custom callable to the `render_script` parameter to customize 
 ### Symfony Requirements
 
 - PHP 7.4 or higher
-- Symfony 5.0, 6.0, or 7.0
+- Symfony 5.0, 6.0, 7.0, or 8.0
 - Twig 2.0 or 3.0
 
 ## Common Features
